test/netlist/error/unused-signal.bop
Main(a, b) = s
where
  s = Id(a);
end where;
